--- a/style.css
+++ b/style.css
@@ -3,24 +3,24 @@
             margin: 10px 0;
             padding: 8px;
         }
-        .valid {
+        .dziala {
             border: 2px solid green;
         }
-        .invalid {
+        .niedziala{
             border: 2px solid red;
         }
-        #podsumowanie {
+        #wynik {
             display: none;
             margin-top: 20px;
         }
         .formu{
-            background-color: azure;
-            width: 30%;
+            background-color: greenyellow;
+            width: 20%;
             margin: 0 auto;
         }
         #formularz{
-            border-radius: 1.5vh;
-            box-shadow: 2px 2px 2px black;
+            border-radius: 1.4vh;
+            box-shadow: 5px 5px 10px rgb(255, 0, 200);
         }
         form{
             display: flex;
